<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        tools:context="com.example.myapplication.ui.ProfileActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/prifile_image"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="15dp"
            tools:srcCompat="@tools:sample/avatars[3]" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/idProfileName"
            android:textColor="#FFF5D7"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate"
                    android:textColor="#FFF5D7"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textColor="#FFF5D7"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtBirthdate"
                    style="@style/profile_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fn_date"
                    android:textColor="#FFF5D7" />

                <TextView
                    android:id="@+id/txtCity"
                    style="@style/profile_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ct_info"
                    android:textColor="#FFF5D7" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleDescription"
                    style="@style/descriptionTitle_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titleDescription"
                    android:textColor="#FFF5D7" />

                <TextView
                    android:id="@+id/txtDescription"
                    style="@style/description_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF5D7"
                    tools:text="Description..." />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>