<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#212121"
        tools:context="com.example.myapplication.ui.movieSearch.FinderDetailActivity">

        <ImageView
            android:id="@+id/movieImg"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:contentDescription="@string/movieImg"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[5]" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/movieTitle"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/movieTitle"
            android:textColor="#FFF5D7"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieImg" />

        <TextView
            android:id="@+id/txtYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/movieYear"
            android:textColor="#FFF5D7"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/movieTitle"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

        <TextView
            android:id="@+id/txtGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/genre"
            android:textColor="#FFF5D7"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txtYear"
            app:layout_constraintTop_toBottomOf="@+id/txtYear" />

        <TextView
            android:id="@+id/txtYearValue"
            style="@style/profile_info_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/movieYearValue"
            android:textColor="#FFF5D7"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="txtGenre,txtYear,txtDirector,txtCast"
            tools:layout_editor_absoluteX="411dp" />

        <TextView
            android:id="@+id/txtDescriptionMovie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/movieDescription"
            android:textColor="#FFF5D7"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtGenre"
            app:layout_constraintTop_toBottomOf="@+id/txtCastValue" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/ImgAdd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescriptionMovie"
            app:srcCompat="@android:drawable/ic_input_add" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgFavorites"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/btn_star" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgShare"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/ic_menu_share" />

        <TextView
            android:id="@+id/txtRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/movieRate"
            android:textColor="#FFE700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txtDescriptionMovie"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/movieTitle"
            app:layout_constraintTop_toTopOf="@+id/movieTitle" />

        <TextView
            android:id="@+id/txtDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="Director"
            android:textColor="#FFF5D7"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txtGenre"
            app:layout_constraintTop_toBottomOf="@+id/txtGenre" />

        <TextView
            android:id="@+id/txtDirectorValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="Jason"
            android:textColor="#FFF5D7"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtDirector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtGenreValue" />

        <TextView
            android:id="@+id/txtGenreValue"
            style="@style/profile_info_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/txtGenreValue"
            android:textColor="#FFF5D7"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtGenre"
            app:layout_constraintEnd_toEndOf="@+id/txtYearValue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtYearValue" />

        <TextView
            android:id="@+id/txtCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="Cast"
            android:textColor="#FFF5D7"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txtDirector"
            app:layout_constraintTop_toBottomOf="@+id/txtDirector" />

        <TextView
            android:id="@+id/txtCastValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="robin, luffy , zoro"
            android:textColor="#FFF5D7"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtCast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtDirectorValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>